<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="agree">AGREE</string>
    <string name="app_can_not_work">The app does not work optimally.</string>
    <string name="app_loading">Loading…</string>
    <string name="app_name">Smittestopp</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_sure_signout">Are you sure you want to sign out?</string>
    <string name="are_sure_to_delete">Are you sure you want to delete your data?</string>
    <string name="ask_permission">Ask me again</string>
    <string name="ask_turn_on_bluetooth">Bluetooth is turned off. Do you want to turn it on?</string>
    <string name="authorisation">Monitoring</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_off">Bluetooth is turned off.</string>
    <string name="bluetooth_reminder">Bluetooth enabled</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broker_processing">Broker is processing</string>
    <string name="bt_not_in_use">Bluetooth is not in use.</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_covid19_info">Click the following links for information and general advice regarding COVID-19:</string>
    <string name="close">CLOSE</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_msg">Potential contact with COVID-19-infected persons cannot be monitored.</string>
    <string name="contact_msg_partial">Potential contact with COVID-19-infected persons cannot be monitored correctly</string>
    <string name="corona_19_d">"The coronavirus outbreak has reached a phase in which it is no longer possible to identify the chain of infection for those who are ill. 

Social distancing and tracking the infection are the only way to stop it."</string>
    <string name="data_deleted_action">Tap to register again</string>
    <string name="data_deleted_notification">Your data was deleted</string>
    <string name="data_deleted_request">You requested your data to be deleted from another device</string>
    <string name="deactivated">Deactivated</string>
    <string name="delete_request_failed">We could not delete your data from the server. Please try again later.</string>
    <string name="deleting">DELETING...</string>
    <string name="desc_icon">Icon</string>
    <string name="divider">divider</string>
    <string name="dont_ask_permission">Close</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fhi_website">" "<a href="https://www.fhi.no/en/"> NIPH main page </a>" "</string>
    <string name="fully_activated">Fully Activated</string>
    <string name="fully_active">Activated</string>
    <string name="general_advice_public">" "<a href="https://www.fhi.no/en/id/infectious-diseases/coronavirus/"> General advice about coronavirus for the public</a>" "</string>
    <string name="go_to_setting_to_change_the_permissions"><u>Go to <b>settings</b> to change the monitoring</u></string>
    <string name="go_to_settings">Go to settings to change the monitoring</string>
    <string name="gps">GPS</string>
    <string name="gps_bt_not_in_use">Neither GPS nor Bluetooth is in use.</string>
    <string name="gps_not_in_use">GPS is not in use.</string>
    <string name="gps_off">GPS is turned off.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_quarantine">" "<a href="https://www.fhi.no/en/op/novel-coronavirus-facts-advice/facts-and-general-advice/social-distance-quarantine-and-isolation/#home-quarantine"> Advice for people under home quarantine </a>" "</string>
    <string name="http_auth_dialog_cancel">Cancel</string>
    <string name="http_auth_dialog_login">Login</string>
    <string name="http_auth_dialog_password">Password</string>
    <string name="http_auth_dialog_title">Enter your credentials</string>
    <string name="http_auth_dialog_username">Username</string>
    <string name="info">Info</string>
    <string name="internet_error">Make sure you are connected to the internet</string>
    <string name="location_gps_reminder">Bluetooth and Location enabled</string>
    <string name="location_reminder">Location Services enabled</string>
    <string name="main_msg">Potential contact with COVID-19-infected persons will not be monitored.</string>
    <string name="message_when_activated">We will contact you if you have been close to someone who is infected with COVID-19.</string>
    <string name="monitoring">Monitoring</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="need_location_message">"Smittestopp does not work without permission to access this device's location. To enable monitoring tap \"Ask me again\"."</string>
    <string name="need_location_message_settings">"Smittestopp does not work without permission to access this device's location. To enable monitoring enable position permissions in the settings."</string>
    <string name="need_location_permission">Missing location permission</string>
    <string name="new_version_available">A new version is available</string>
    <string name="new_version_description">Click to update Smittestopp</string>
    <string name="next">NEXT</string>
    <string name="not_registered">Not registered</string>
    <string name="notification_description">Monitoring position and close contacts for infection tracking.</string>
    <string name="ok">OK</string>
    <string name="onboarding1">"Thank you for helping us limit the spread of the coronavirus. 


 To limit the infection within the population, it is important to practice social distancing, good hand hygiene and cough etiquette. Additionally you can help us warn individuals who could have been infected by using Smittestopp (\"Infection stop\")."</string>
    <string name="onboarding2">Smittestopp notifies you via SMS text if you have been near an app user who has later tested positive for coronavirus.</string>
    <string name="onboarding4">" We need your phone number to contact you in case you have been close to an infected person. You can check your data in the "<a href="https://eid.difi.no/en/common-contact-register"> Common contact register </a>" "</string>
    <string name="phone">Phone</string>
    <string name="self_reporting">" "<a href="https://helsenorge.no/koronavirus/koronasmitte"> Self-report symptoms to Helsenorge </a>" "</string>
    <string name="settings">Settings</string>
    <string name="settings_delete_data">DELETE ALL MY DATA</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="short_privacy_1">The NIPH stores information and uses it to warn you about potential contact with infected individuals.</string>
    <string name="short_privacy_2">The NIPH does not use this information to check if you or others comply with advice or orders by the authorities.</string>
    <string name="short_privacy_3">All personal information collected by the app is deleted automatically after 30 days.</string>
    <string name="sign_out">Sign out</string>
    <string name="support">Support</string>
    <string name="support_email"><a href="https://helsenorge.no/kontakt">https://helsenorge.no/kontakt</a></string>
    <string name="support_phone">23 32 70 00</string>
    <string name="thanks_for_help">Thank you for your help!</string>
    <string name="title3">Privacy</string>
    <string name="toggle_bluetooth">Toggle bluetooth</string>
    <string name="toggle_gps">Toggle GPS</string>
</resources>