<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/title" android:gravity="center" android:id="@id/monitoring" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/monitoring" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/enableTracking" android:background="#00ffffff" android:layout_width="@dimen/monitor_image" android:layout_height="@dimen/monitor_image" android:layout_marginLeft="91.0dip" android:layout_marginTop="@dimen/monitor_image_top_margin" android:layout_marginRight="90.0dip" android:layout_marginBottom="248.0dip" android:scaleType="centerInside" android:contentDescription="@string/desc_icon" android:layout_marginStart="91.0dip" android:layout_marginEnd="90.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/monitoring" app:srcCompat="@drawable/ic_monitor" style="@style/Widget.AppCompat.ImageButton" />
    <TextView android:textAppearance="@style/body" android:textColor="@color/green" android:gravity="center|top" android:id="@id/textViewMainStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fully_activated" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/enableTracking" app:layout_goneMarginTop="24.0dip" />
    <LinearLayout android:id="@id/llImages" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/monitor_image_top_margin_icon" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textViewMainStatus">
        <ImageView android:id="@id/imageBluetooth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="17.0dip" android:src="@drawable/ic_bluetooth" android:contentDescription="@string/toggle_bluetooth" />
        <ImageView android:id="@id/imageGps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:src="@drawable/ic_location" android:contentDescription="@string/toggle_gps" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/llStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="@dimen/monitor_image_bottom_text_margin" app:layout_constraintBottom_toTopOf="@id/frameLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView android:textAppearance="@style/body" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/textViewTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/thanks_for_help" />
        <TextView android:textAppearance="@style/body" android:gravity="center_horizontal" android:id="@id/textViewSettings1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/go_to_setting_to_change_the_permissions" />
        <TextView android:textAppearance="@style/body" android:gravity="center_horizontal" android:id="@id/textViewStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/monitor_text_top_margin" android:text="@string/main_msg" />
    </LinearLayout>
    <FrameLayout android:id="@id/frameLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView android:gravity="center" android:id="@id/buttonShare" android:background="@drawable/background_filled_light_round" android:paddingTop="@dimen/button_padding_vertical" android:paddingBottom="@dimen/button_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/onboarding_bottom_margin" android:text="@string/share_with_friends" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/button_label" />
        <TextView android:gravity="center" android:id="@id/buttonSettings" android:background="@drawable/background_filled_light_round" android:paddingTop="@dimen/button_padding_vertical" android:paddingBottom="@dimen/button_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/onboarding_bottom_margin" android:text="@string/go_to_settings" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/button_label" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>