<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView android:id="@id/android_set" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/settings_main" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0">
        <TextView android:textAppearance="@style/title" android:id="@id/settings" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/settings" android:fontFamily="@font/brandontext_bold" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/settings" app:layout_constraintTop_toBottomOf="@id/settings" />
        <ImageView android:id="@id/divider0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="29.0dip" android:contentDescription="@string/divider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/settings" app:srcCompat="@drawable/divider" />
        <TextView android:textAppearance="@style/subtitle" android:id="@id/account" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/account" android:fontFamily="@font/brandontext_medium" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider0" />
        <TextView android:textAppearance="@style/body" android:id="@id/phone_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="13.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/phone_number_header" app:layout_constraintTop_toBottomOf="@id/account" />
        <TextView android:textAppearance="@style/body" android:id="@id/phone_number_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/phone" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toStartOf="@id/phone_number" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/account" />
        <ImageView android:id="@id/divider1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:contentDescription="@string/divider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/phone_number" app:srcCompat="@drawable/divider" />
        <TextView android:textAppearance="@style/subtitle" android:id="@id/authorisation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/authorisation" android:fontFamily="@font/brandontext_medium" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider1" />
        <ImageView android:id="@id/divider2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bluetooth_text" app:srcCompat="@drawable/divider" />
        <TextView android:textAppearance="@style/subtitle" android:id="@id/support" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/support" android:fontFamily="@font/brandontext_medium" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider2" />
        <TextView android:textAppearance="@style/body" android:id="@id/support_email" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/support_email" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/support" />
        <TextView android:textAppearance="@style/body" android:id="@id/support_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/support_phone" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/support_email" />
        <Button android:id="@id/delete_data_button" android:background="#ffde5e56" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginTop="19.0dip" android:layout_marginBottom="20.0dip" android:text="@string/settings_delete_data" android:fontFamily="@font/roboto" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" style="@style/regular_12p" />
        <Button android:id="@id/logout_button" android:background="@drawable/outlined_button_warn" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/sign_out" android:fontFamily="@font/roboto" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toTopOf="@id/phone_number_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/account" style="@style/regular_12p_dark" />
        <ImageView android:id="@id/imageView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:contentDescription="@string/divider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/support_phone" app:srcCompat="@drawable/divider" />
        <Switch android:id="@id/gpsSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:contentDescription="@string/toggle_gps" android:layout_marginStart="44.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/authorisation" />
        <TextView android:textAppearance="@style/body" android:id="@id/gps_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/gps" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="33.0dip" app:layout_constraintStart_toEndOf="@id/gpsSwitch" app:layout_constraintTop_toBottomOf="@id/authorisation" />
        <TextView android:textAppearance="@style/body" android:id="@id/bluetooth_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/bluetooth" android:fontFamily="@font/brandontext_regular" android:layout_marginStart="33.0dip" app:layout_constraintStart_toEndOf="@id/bluetoothSwith" app:layout_constraintTop_toBottomOf="@id/gps_text" />
        <Switch android:id="@id/bluetoothSwith" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:contentDescription="@string/toggle_bluetooth" android:layout_marginStart="44.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gpsSwitch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</android.widget.ScrollView>