<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/header_14sp" android:id="@id/general_advice_public" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/info_text_margin" android:layout_marginRight="20.0dip" android:text="@string/general_advice_public" android:fontFamily="@font/brandontext_medium" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fhi_website" />
    <TextView android:textAppearance="@style/header_14sp" android:id="@id/home_quarantine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/info_text_margin" android:layout_marginRight="20.0dip" android:text="@string/home_quarantine" android:fontFamily="@font/brandontext_medium" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/general_advice_public" />
    <TextView android:textAppearance="@style/body" android:id="@id/support_email2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/check_covid19_info" android:fontFamily="@font/brandontext_regular" android:textAlignment="center" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/information" />
    <TextView android:textAppearance="@style/title" android:id="@id/information" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/info" android:fontFamily="@font/brandontext_bold" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textAppearance="@style/header_14sp" android:id="@id/fhi_website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/fhi_website" android:fontFamily="@font/brandontext_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/support_email2" />
    <TextView android:textAppearance="@style/header_14sp" android:id="@id/self_reporting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/info_text_margin" android:layout_marginRight="20.0dip" android:text="@string/self_reporting" android:fontFamily="@font/brandontext_medium" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/home_quarantine" />
</androidx.constraintlayout.widget.ConstraintLayout>