<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/llMain" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="20.0dip" android:layout_above="@id/buttonCallOfAction" app:layout_constraintBottom_toTopOf="@id/buttonCallOfAction" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="100.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="44.0dip" android:layout_marginRight="16.0dip">
            <TextView android:id="@id/textViewWelcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/on_boarding_top_margin" android:text="@string/title3" style="@style/title" />
            <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/privacy_image_track" android:layout_marginTop="@dimen/ob_privacy_image_top_margin" android:src="@drawable/ic_privacy_track" />
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ob_privacy_text_top_margin" android:text="@string/short_privacy_1" style="@style/body" />
            <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/privacy_image_advice" android:layout_marginTop="@dimen/ob_privacy_image_top_margin" android:src="@drawable/ic_privacy_advice" />
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ob_privacy_text_top_margin" android:text="@string/short_privacy_2" style="@style/body" />
            <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/privacy_image_track" android:layout_marginTop="@dimen/ob_privacy_image_top_margin" android:src="@drawable/ic_privacy_trash" />
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ob_privacy_text_top_margin" android:text="@string/short_privacy_3" style="@style/body" />
        </LinearLayout>
    </ScrollView>
    <TextView android:gravity="center" android:id="@id/buttonCallOfAction" android:background="@drawable/background_filled_dark_round" android:paddingTop="@dimen/button_padding_vertical" android:paddingBottom="@dimen/button_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/button_padding_horizontal" android:layout_marginRight="@dimen/button_padding_horizontal" android:layout_marginBottom="@dimen/onboarding_bottom_margin" android:text="@string/next" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:layout_constraintBottom_toBottomOf="parent" style="@style/button_label" />
</androidx.constraintlayout.widget.ConstraintLayout>